# Training_Project

./: README.md
ArimethicCoding/main/: Main.sln
FPT/: CMakeLists.txt  HN20_FR_CPP_02_Mock.txt  User.txt  fptEmployeer.cpp  fptEmployeer.h  fptFresher.cpp  fptFresher.h  fptSocialNetwork.cpp  fptSocialNetwork.h  fptUsers.cpp  fptUsers.h
Icon/: BL-NCS.docx
MVVM/: README.md
Matrix/: CMakeLists.txt  main.cpp
MongoDB/: README.md
MongoDB/Client/: mainwindow.py  mplcanvas.py  ui_mainwindow.py  ui_mainwindow.ui
MongoDB/Example/: main.py
MongoDB/matplotlibExample/: main.py
Node-RED/: README.md  flows1.json  flows2.json  flows3.json  flows4.json
PrimeNumbers/: CMakeLists.txt  main.cpp
PyQt/ClientView/: mainwindow.py
PyQt/First/: main.py
PyQt/NewTestApp/: MainWindow.py  MainWindowGrid.py  MainWindowGrid.ui  TextEdit.py  TextEdit.ui  ToolBoxExample.py  main.py
PyQt/mqttClient/: main.py  ui_mainwindow.py  ui_mainwindow.ui
PyQt/testApp/: main.py  testApp.py
Qt_creator/CMakeTest/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  mqttconnection.h
Qt_creator/CMake_test/: CMakeLists.txt
Qt_creator/Matrix/: CMakeLists.txt
Qt_creator/Matrix_new/: CMakeLists.txt
Qt_creator/Notepad/: mainwindow.cpp  mainwindow.h
Qt_creator/Test/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt_creator/build-Test-Desktop-Debug/: Test  (+4 more)
TungLam/Calculator/: CMakeLists.txt
TungLam/Calculator/include/calculatorlib/: maincc.h
TungLam/Calculator/src/: mainc.cpp
TungLam/Calculator/src/calculatorlib/: maincc.cpp
Vitural-Assitant/: README.md  Untitled.ipynb
dateAndBirth/: CMakeLists.txt
(+113 files in other folders)
